[gd_scene load_steps=69 format=2]

[ext_resource path="res://sprites/Wizard Pack/Attack1.png" type="Texture" id=1]
[ext_resource path="res://sprites/Wizard Pack/Attack2.png" type="Texture" id=2]
[ext_resource path="res://sprites/Wizard Pack/Idle.png" type="Texture" id=3]
[ext_resource path="res://sprites/Wizard Pack/Run.png" type="Texture" id=4]
[ext_resource path="res://Wizard_enemy.gd" type="Script" id=5]
[ext_resource path="res://sprites/hud_vida.tres" type="Theme" id=6]
[ext_resource path="res://sprites/Wizard Pack/Death.png" type="Texture" id=7]

[sub_resource type="CircleShape2D" id=33]
radius = 645.446

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 231, 190 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 3 )
region = Rect2( 231, 0, 231, 190 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 3 )
region = Rect2( 462, 0, 231, 190 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 3 )
region = Rect2( 693, 0, 231, 190 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 3 )
region = Rect2( 924, 0, 231, 190 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 3 )
region = Rect2( 1155, 0, 231, 190 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 231, 190 )

[sub_resource type="AtlasTexture" id=25]
atlas = ExtResource( 4 )
region = Rect2( 231, 0, 231, 190 )

[sub_resource type="AtlasTexture" id=26]
atlas = ExtResource( 4 )
region = Rect2( 462, 0, 231, 190 )

[sub_resource type="AtlasTexture" id=27]
atlas = ExtResource( 4 )
region = Rect2( 693, 0, 231, 190 )

[sub_resource type="AtlasTexture" id=28]
atlas = ExtResource( 4 )
region = Rect2( 924, 0, 231, 190 )

[sub_resource type="AtlasTexture" id=29]
atlas = ExtResource( 4 )
region = Rect2( 1155, 0, 231, 190 )

[sub_resource type="AtlasTexture" id=30]
atlas = ExtResource( 4 )
region = Rect2( 1386, 0, 231, 190 )

[sub_resource type="AtlasTexture" id=31]
atlas = ExtResource( 4 )
region = Rect2( 1617, 0, 231, 190 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 231, 190 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 2 )
region = Rect2( 231, 0, 231, 190 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 2 )
region = Rect2( 462, 0, 231, 190 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 2 )
region = Rect2( 693, 0, 231, 190 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 2 )
region = Rect2( 924, 0, 231, 190 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 2 )
region = Rect2( 1155, 0, 231, 190 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 2 )
region = Rect2( 1386, 0, 231, 190 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 2 )
region = Rect2( 1617, 0, 231, 190 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 231, 190 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 1 )
region = Rect2( 231, 0, 231, 190 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 1 )
region = Rect2( 462, 0, 231, 190 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 1 )
region = Rect2( 693, 0, 231, 190 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 1 )
region = Rect2( 924, 0, 231, 190 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 1 )
region = Rect2( 1155, 0, 231, 190 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 1 )
region = Rect2( 1386, 0, 231, 190 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 1 )
region = Rect2( 1617, 0, 231, 190 )

[sub_resource type="AtlasTexture" id=51]
atlas = ExtResource( 7 )
region = Rect2( 0, 0, 231, 190 )

[sub_resource type="AtlasTexture" id=52]
atlas = ExtResource( 7 )
region = Rect2( 231, 0, 231, 190 )

[sub_resource type="AtlasTexture" id=53]
atlas = ExtResource( 7 )
region = Rect2( 462, 0, 231, 190 )

[sub_resource type="AtlasTexture" id=54]
atlas = ExtResource( 7 )
region = Rect2( 693, 0, 231, 190 )

[sub_resource type="AtlasTexture" id=55]
atlas = ExtResource( 7 )
region = Rect2( 924, 0, 231, 190 )

[sub_resource type="AtlasTexture" id=56]
atlas = ExtResource( 7 )
region = Rect2( 1155, 0, 231, 190 )

[sub_resource type="AtlasTexture" id=57]
atlas = ExtResource( 7 )
region = Rect2( 1386, 0, 231, 190 )

[sub_resource type="SpriteFrames" id=32]
animations = [ {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ) ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ SubResource( 24 ), SubResource( 25 ), SubResource( 26 ), SubResource( 27 ), SubResource( 28 ), SubResource( 29 ), SubResource( 30 ), SubResource( 31 ) ],
"loop": true,
"name": "walk",
"speed": 5.0
}, {
"frames": [ SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ) ],
"loop": true,
"name": "ataque2",
"speed": 5.0
}, {
"frames": [ SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ), SubResource( 23 ) ],
"loop": true,
"name": "ataque1",
"speed": 5.0
}, {
"frames": [ SubResource( 51 ), SubResource( 52 ), SubResource( 53 ), SubResource( 54 ), SubResource( 55 ), SubResource( 56 ), SubResource( 57 ) ],
"loop": true,
"name": "die",
"speed": 5.0
} ]

[sub_resource type="Animation" id=34]
resource_name = "Idle"
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "default" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 5, 1, 2, 3, 4 ]
}

[sub_resource type="Animation" id=44]
resource_name = "ataque1"
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "ataque1" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7 ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.6 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "fire"
} ]
}
tracks/3/type = "value"
tracks/3/path = NodePath(".:attacking")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=50]
resource_name = "die"
length = 0.7
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "die" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6 ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.7 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "queue_free"
} ]
}

[sub_resource type="Animation" id=35]
resource_name = "walk"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "walk" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7 ]
}

[sub_resource type="AnimationNodeAnimation" id=36]
animation = "Idle"

[sub_resource type="AnimationNodeAnimation" id=45]
animation = "ataque1"

[sub_resource type="AnimationNodeAnimation" id=58]
animation = "die"

[sub_resource type="AnimationNodeAnimation" id=37]
animation = "walk"

[sub_resource type="AnimationNodeStateMachineTransition" id=38]

[sub_resource type="AnimationNodeStateMachineTransition" id=39]

[sub_resource type="AnimationNodeStateMachineTransition" id=46]

[sub_resource type="AnimationNodeStateMachineTransition" id=47]

[sub_resource type="AnimationNodeStateMachineTransition" id=48]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=49]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=59]

[sub_resource type="AnimationNodeStateMachineTransition" id=60]

[sub_resource type="AnimationNodeStateMachineTransition" id=61]

[sub_resource type="AnimationNodeStateMachine" id=40]
states/Idle/node = SubResource( 36 )
states/Idle/position = Vector2( 196.333, 148.333 )
states/ataque1/node = SubResource( 45 )
states/ataque1/position = Vector2( 320.333, 261.667 )
states/die/node = SubResource( 58 )
states/die/position = Vector2( 610, 247.948 )
states/walk/node = SubResource( 37 )
states/walk/position = Vector2( 461.667, 147.889 )
transitions = [ "Idle", "walk", SubResource( 38 ), "walk", "Idle", SubResource( 39 ), "Idle", "ataque1", SubResource( 46 ), "walk", "ataque1", SubResource( 47 ), "ataque1", "Idle", SubResource( 48 ), "ataque1", "walk", SubResource( 49 ), "ataque1", "die", SubResource( 59 ), "walk", "die", SubResource( 60 ), "Idle", "die", SubResource( 61 ) ]
start_node = "Idle"
graph_offset = Vector2( 0, 151.948 )

[sub_resource type="AnimationNodeStateMachinePlayback" id=41]

[sub_resource type="StyleBoxFlat" id=42]
bg_color = Color( 0.556863, 0.0666667, 0.0666667, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.8, 0.8, 0.8, 0 )

[sub_resource type="StyleBoxFlat" id=43]
bg_color = Color( 0.6, 0.6, 0.6, 0 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.133333, 0.00784314, 0.00784314, 1 )

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 25.5, 39 )

[node name="Wizard_enemy" type="KinematicBody2D"]
scale = Vector2( 1.3, 1.3 )
collision_layer = 2
collision_mask = 32779
script = ExtResource( 5 )
attacking = true

[node name="Area2D" type="Area2D" parent="."]
visible = false
collision_layer = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 33 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 32 )
animation = "die"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Idle = SubResource( 34 )
anims/ataque1 = SubResource( 44 )
anims/die = SubResource( 50 )
anims/walk = SubResource( 35 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 40 )
anim_player = NodePath("../AnimationPlayer")
parameters/playback = SubResource( 41 )

[node name="ProgressBar" type="ProgressBar" parent="."]
margin_left = -49.0
margin_top = -65.0
margin_right = 48.0
margin_bottom = -51.0
theme = ExtResource( 6 )
custom_styles/fg = SubResource( 42 )
custom_styles/bg = SubResource( 43 )
value = 100.0
percent_visible = false

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0, 6 )
shape = SubResource( 1 )

[node name="pivot" type="Node2D" parent="."]
position = Vector2( 0, -30 )

[node name="spawn" type="Node2D" parent="pivot"]
position = Vector2( 50, 0 )

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
